projeto/geometrics-comp-03/src/Grammar/GeometricsParser.java
// Generated from Geometrics.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GeometricsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, Int=105, Double=106, Boolean=107, 
		Color=108, HexColor=109, Key=110, Label=111, String=112, SingleLineComment=113, 
		MultiLineComment=114, WS=115;
	public static final int
		RULE_prog = 0, RULE_grammar_declaration = 1, RULE_stat = 2, RULE_load_bank = 3, 
		RULE_render = 4, RULE_create_instance = 5, RULE_destroy_instance = 6, 
		RULE_set_frame_rate = 7, RULE_canvas_size = 8, RULE_instantiate_figure = 9, 
		RULE_figure_declaration = 10, RULE_figure_properties = 11, RULE_primitive_figure_type = 12, 
		RULE_primitive_figure_declaration = 13, RULE_primitive_figure_block = 14, 
		RULE_property_assignment = 15, RULE_property_name = 16, RULE_normal_primitive_type = 17, 
		RULE_normal_primitive_declaration = 18, RULE_normal_primitive_assignment = 19, 
		RULE_point = 20, RULE_position = 21, RULE_time = 22, RULE_time_unit = 23, 
		RULE_create_group = 24, RULE_group = 25, RULE_animation = 26, RULE_animation_block = 27, 
		RULE_argument_declaration = 28, RULE_animate = 29, RULE_animation_statments = 30, 
		RULE_figure_operation = 31, RULE_figure_label = 32, RULE_move_figure = 33, 
		RULE_rotate_figure = 34, RULE_rotate_around = 35, RULE_scale_figure = 36, 
		RULE_hide_figure = 37, RULE_show_figure = 38, RULE_change_property = 39, 
		RULE_cond_statement = 40, RULE_if_statement = 41, RULE_else_if_statement = 42, 
		RULE_else_statment = 43, RULE_expr = 44, RULE_color = 45, RULE_loop_statement = 46, 
		RULE_condition_block = 47, RULE_valid_statments = 48, RULE_breakInLoop = 49, 
		RULE_wait_for_key = 50, RULE_input = 51, RULE_key_pressed = 52, RULE_pew = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "grammar_declaration", "stat", "load_bank", "render", "create_instance", 
			"destroy_instance", "set_frame_rate", "canvas_size", "instantiate_figure", 
			"figure_declaration", "figure_properties", "primitive_figure_type", "primitive_figure_declaration", 
			"primitive_figure_block", "property_assignment", "property_name", "normal_primitive_type", 
			"normal_primitive_declaration", "normal_primitive_assignment", "point", 
			"position", "time", "time_unit", "create_group", "group", "animation", 
			"animation_block", "argument_declaration", "animate", "animation_statments", 
			"figure_operation", "figure_label", "move_figure", "rotate_figure", "rotate_around", 
			"scale_figure", "hide_figure", "show_figure", "change_property", "cond_statement", 
			"if_statement", "else_if_statement", "else_statment", "expr", "color", 
			"loop_statement", "condition_block", "valid_statments", "breakInLoop", 
			"wait_for_key", "input", "key_pressed", "pew"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Geometrics'", "';'", "'load'", "'from'", "'render'", "'create'", 
			"'destroy'", "'Frame'", "'Rate'", "'Canvas Size'", "'figure'", "'{'", 
			"'}'", "'circle'", "'line'", "'rectangle'", "'square'", "'ellipse'", 
			"'polyline'", "'polygon'", "'arc'", "':'", "'hidden'", "'center'", "'points'", 
			"'scale'", "'angle'", "'fill'", "'fill_color'", "'border_color'", "'border'", 
			"'thickness'", "'radius'", "'length'", "'width'", "'height'", "'position'", 
			"'pivot'", "'layer'", "'point'", "'int'", "'double'", "'string'", "'boolean'", 
			"'time'", "'='", "'('", "','", "')'", "'at'", "'s'", "'ms'", "'ns'", 
			"'group'", "'['", "']'", "'animation'", "'animate'", "'.'", "'move'", 
			"'by'", "'to'", "'rotate'", "'around'", "'hide'", "'show'", "'if'", "'else if'", 
			"'else'", "'+'", "'-'", "'!'", "'^'", "'*'", "'/'", "'%'", "'=='", "'!='", 
			"'<'", "'>'", "'<='", "'>='", "'and'", "'or'", "'just'", "'collided'", 
			"'is'", "'colliding'", "'stopped'", "'intersects'", "'union'", "'HSV'", 
			"'RGB'", "'do'", "'while'", "'for'", "'times'", "'in'", "'break'", "'wait'", 
			"'input'", "'key'", "'pressed'", "'pew;'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "Int", "Double", 
			"Boolean", "Color", "HexColor", "Key", "Label", "String", "SingleLineComment", 
			"MultiLineComment", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Geometrics.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GeometricsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public Grammar_declarationContext grammar_declaration() {
			return getRuleContext(Grammar_declarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GeometricsParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			grammar_declaration();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__25) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__53) | (1L << T__56) | (1L << T__57) | (1L << T__59) | (1L << T__62))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (T__64 - 65)) | (1L << (T__65 - 65)) | (1L << (T__66 - 65)) | (1L << (T__93 - 65)) | (1L << (T__94 - 65)) | (1L << (T__95 - 65)) | (1L << (T__99 - 65)) | (1L << (T__100 - 65)) | (1L << (T__103 - 65)) | (1L << (Label - 65)))) != 0)) {
				{
				{
				setState(109);
				stat();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Grammar_declarationContext extends ParserRuleContext {
		public Token name;
		public TerminalNode Label() { return getToken(GeometricsParser.Label, 0); }
		public Grammar_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammar_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterGrammar_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitGrammar_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitGrammar_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Grammar_declarationContext grammar_declaration() throws RecognitionException {
		Grammar_declarationContext _localctx = new Grammar_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammar_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__0);
			setState(118);
			((Grammar_declarationContext)_localctx).name = match(Label);
			setState(119);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public RenderContext render() {
			return getRuleContext(RenderContext.class,0);
		}
		public Primitive_figure_declarationContext primitive_figure_declaration() {
			return getRuleContext(Primitive_figure_declarationContext.class,0);
		}
		public Normal_primitive_declarationContext normal_primitive_declaration() {
			return getRuleContext(Normal_primitive_declarationContext.class,0);
		}
		public Normal_primitive_assignmentContext normal_primitive_assignment() {
			return getRuleContext(Normal_primitive_assignmentContext.class,0);
		}
		public Figure_declarationContext figure_declaration() {
			return getRuleContext(Figure_declarationContext.class,0);
		}
		public Create_instanceContext create_instance() {
			return getRuleContext(Create_instanceContext.class,0);
		}
		public Cond_statementContext cond_statement() {
			return getRuleContext(Cond_statementContext.class,0);
		}
		public Loop_statementContext loop_statement() {
			return getRuleContext(Loop_statementContext.class,0);
		}
		public Set_frame_rateContext set_frame_rate() {
			return getRuleContext(Set_frame_rateContext.class,0);
		}
		public Canvas_sizeContext canvas_size() {
			return getRuleContext(Canvas_sizeContext.class,0);
		}
		public Figure_operationContext figure_operation() {
			return getRuleContext(Figure_operationContext.class,0);
		}
		public Wait_for_keyContext wait_for_key() {
			return getRuleContext(Wait_for_keyContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public Create_groupContext create_group() {
			return getRuleContext(Create_groupContext.class,0);
		}
		public Destroy_instanceContext destroy_instance() {
			return getRuleContext(Destroy_instanceContext.class,0);
		}
		public Load_bankContext load_bank() {
			return getRuleContext(Load_bankContext.class,0);
		}
		public AnimationContext animation() {
			return getRuleContext(AnimationContext.class,0);
		}
		public AnimateContext animate() {
			return getRuleContext(AnimateContext.class,0);
		}
		public PewContext pew() {
			return getRuleContext(PewContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				render();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				primitive_figure_declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				normal_primitive_declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				normal_primitive_assignment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(125);
				figure_declaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(126);
				create_instance();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(127);
				cond_statement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(128);
				loop_statement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(129);
				set_frame_rate();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(130);
				canvas_size();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(131);
				figure_operation();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(132);
				wait_for_key();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(133);
				input();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(134);
				create_group();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(135);
				destroy_instance();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(136);
				load_bank();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(137);
				animation();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(138);
				animate();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(139);
				pew();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Load_bankContext extends ParserRuleContext {
		public Load_bankContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_load_bank; }
	 
		public Load_bankContext() { }
		public void copyFrom(Load_bankContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LoadBankContext extends Load_bankContext {
		public TerminalNode String() { return getToken(GeometricsParser.String, 0); }
		public LoadBankContext(Load_bankContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterLoadBank(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitLoadBank(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitLoadBank(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Load_bankContext load_bank() throws RecognitionException {
		Load_bankContext _localctx = new Load_bankContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_load_bank);
		try {
			_localctx = new LoadBankContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__2);
			setState(143);
			match(T__3);
			setState(144);
			match(String);
			setState(145);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RenderContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public RenderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_render; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterRender(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitRender(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitRender(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RenderContext render() throws RecognitionException {
		RenderContext _localctx = new RenderContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_render);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(T__4);
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__46 || _la==T__54 || ((((_la - 70)) & ~0x3f) == 0 && ((1L << (_la - 70)) & ((1L << (T__69 - 70)) | (1L << (T__70 - 70)) | (1L << (T__71 - 70)) | (1L << (T__91 - 70)) | (1L << (T__92 - 70)) | (1L << (T__101 - 70)) | (1L << (Int - 70)) | (1L << (Double - 70)) | (1L << (Boolean - 70)) | (1L << (Color - 70)) | (1L << (Label - 70)) | (1L << (String - 70)))) != 0)) {
				{
				setState(148);
				expr(0);
				}
			}

			setState(151);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_instanceContext extends ParserRuleContext {
		public Instantiate_figureContext instantiate_figure() {
			return getRuleContext(Instantiate_figureContext.class,0);
		}
		public Create_instanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_instance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterCreate_instance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitCreate_instance(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitCreate_instance(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_instanceContext create_instance() throws RecognitionException {
		Create_instanceContext _localctx = new Create_instanceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_create_instance);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(T__5);
			setState(154);
			instantiate_figure();
			setState(155);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
